--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,12 @@ h1{
     font-size: 24px;
 }
 
-a, ol{
+h2{
+    font-family: Verdana, 'Geneva', Tahoma, sans-serif;
+    font-size: 18px;
+    text-align: center;
+}
+a, ol, ul{
     color: rgb(0, 0, 0);
 }
 
